fix notification error